--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+@import url("css-helpers/banner.css");
+@import url('css-helpers/product.css');
 
 body, html{
   padding:0;
@@ -12,91 +14,6 @@ body, html{
 @font-face {
   font-family: Helvetica Neue LT Std;
   src: url("fonts/HelveticaNeueLTStd-Roman.otf");
-}
-
-#bannerSection{
-  background: url("image-assets/icons-remastered-online-lp-d.jpg") no-repeat center;
-  background-size: contain;
-  background-size: 100% 100%;
-  width: 100%;
-  height: 852px;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  margin-bottom: 100px;
-}
-
-#bannerTextContainer{
-  display: flex;
-  flex-direction: column;
-  width: 45%;
-  justify-content: center;
-  align-content: center;
-}
-
-#bannerHeadline{
-  font-size: 2em;
-}
-
-#bannerCopy{
-  font-size: 1.1em;
-  line-height: 1.5;
-  margin-top: -6%;
-}
-
-#productSection{
-  height: auto;
-}
-
-.productLeft{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.productRight{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.productImage{
-  width: 45%;
-}
-
-.productTextContainer{
-  width: 40%;
-  display: flex;
-  justify-content: center;
-  align-content: space-around;
-  margin: 0%;
-}
-
-.productText{
-  width:90%
-}
-
-.productAttention{
-  font-size: 1.8em;
-  margin-bottom:-5%;
-}
-
-.productHeadline{
-  font-size: 3.2em;
-  line-height: 1.5em;
-  margin: 0%;
-}
-
-.productCopy{
-  font-size: 1em;
-  line-height: 1.5em;
-  margin-bottom: 5%;
-}
-
-.buttonContainer{
-  width:100%
 }
 
 button{
@@ -118,88 +35,6 @@ button:hover {
 }
 
 @media only screen and (max-width: 1024px) {
-  #bannerSection{
-    background: url("image-assets/icons-remastered-online-lp-m.jpg") no-repeat;
-    background-size: cover;
-    background-size: 100%;
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
-  
-  #bannerTextContainer{
-    width: 80%;
-    justify-content: space-evenly;
-  }
-  
-  #bannerHeadline{
-    margin-top: 50%;
-    font-size: 3em;
-  }
-  
-  #bannerCopy{
-    margin-top: 60%;
-    font-size: 2em;
-  }
-  
-  #productSection{
-    height: 100%;
-    max-width: 100%;
-  }
-
-  .productRight{
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-  }
-
-  .productLeft{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .productImage{
-    width:100%
-  }
-  
-  .productTextContainer{
-    width: 100%;
-    height: auto;
-    justify-content: flex-start;
-    margin-left: 10%;
-    flex-direction: column;
-    margin-top: 5%;
-  }
-  
-  .productAttention{
-    font-size: 2.4em;
-    margin: 0;
-  }
-  
-  .productHeadline{
-    font-size: 3.5em;
-  }
-  
-  .productCopy{
-    font-size: 1.7em;
-  }
-
-  .buttonContainer{
-    height: 30%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-    margin-bottom: 10%;
-  }
-
-
   button{
   background-color: #ffffff;
   border: none;
