--- a/css-helpers/banner.css
+++ b/css-helpers/banner.css
@@ -23,7 +23,8 @@
 }
 
 #bannerCopy{
-  font-size: 1.1em;
+  font-family: Helvetica Neue LT;
+  font-size: 1.2em;
   line-height: 1.5;
   margin-top: -6%;
 }
@@ -38,32 +39,40 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-bottom: 5%;
   }
   
   #bannerTextContainer{
     width: 80%;
     justify-content: space-evenly;
+    margin-bottom: 0;
   }
   
   #bannerHeadline{
     margin-top: 50%;
-    font-size: 3em;
+    margin-bottom: 50%;
+    font-size: 3.8em;
   }
   
   #bannerCopy{
-    margin-top: 55%;
     font-size: 2em;
   }
 }
 
-@media only screen and (max-width: 740px) {
+@media only screen and (max-width: 940px) {
   #bannerHeadline{
-    font-size: 2.5em;
+    font-size: 3.1em;
+    margin-bottom: 55%;
   }
   
   #bannerCopy{
-    margin-top: 50%;
     font-size: 1.5em;
+  }
+}
+
+@media only screen and (max-width: 765px) {
+  #bannerHeadline{
+    font-size: 2.5em;
   }
 }
 
@@ -80,6 +89,7 @@
 @media only screen and (max-width: 495px) {
   #bannerHeadline{
     font-size: 1.5em;
+    margin-bottom: 60%;
   }
   
   #bannerCopy{
