--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ body, html{
   margin:0;
   overflow-x: hidden;
   background-color: black;
-  font-family:Helvetica Neue LT Std; 
+  font-family:Helvetica Neue LT Std;
   color:white;
   font-size: 100%;
 }
@@ -16,18 +16,23 @@ body, html{
   src: url("fonts/HelveticaNeueLTStd-Roman.otf");
 }
 
+@font-face {
+  font-family: Helvetica Neue LT;
+  src: url("fonts/HelveticaNeueLTStd-Lt.otf");
+}
+
 button{
   background-color: #ffffff;
   border: none;
   color: black;
-  padding: 5% 9%;
+  padding: 4% 8%;
   text-align: center;
   text-decoration: none;
   font-size: 1em;
   display: inline-block;
-  margin: 6px 4px;
+  margin: 0px 2px;
   cursor: pointer;
-  border-radius: 30px;
+  border-radius: 45px;
 }
 
 button:hover {
@@ -36,18 +41,33 @@ button:hover {
 
 @media only screen and (max-width: 1024px) {
   button{
-  background-color: #ffffff;
-  border: none;
-  color: black;
   min-width:600px;
   padding: 26px 160px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
   font-size: 2.5em;
   margin: 4px 2px;
-  cursor: pointer;
   border-radius: 45px;
   margin-bottom: 5%;
+  }
+}
+
+@media only screen and (max-width: 610px) {
+  button{
+  min-width:400px;
+  padding: 18px 100px;
+  font-size: 1.5em;
+  }
+}
+
+@media only screen and (max-width: 411px) {
+  button{
+  min-width:320px;
+  padding: 16px 60px;
+  font-size: 1em;
+  }
+}
+
+@media only screen and (max-width: 330px) {
+  button{
+  min-width:250px;
   }
 }
