--- a/main.css
+++ b/main.css
@@ -5,9 +5,9 @@ body, html{
   padding:0;
   margin:0;
   overflow-x: hidden;
-  background-color: black;
+  background-color: #000000;
   font-family:Helvetica Neue LT Std;
-  color:white;
+  color:#ffffff;
   font-size: 100%;
 }
 
@@ -24,11 +24,11 @@ body, html{
 button{
   background-color: #ffffff;
   border: none;
-  color: black;
-  padding: 4% 8%;
+  color: #000000;
+  padding: 3% 7%;
   text-align: center;
   text-decoration: none;
-  font-size: 1em;
+  font-size: 1.3vw;
   display: inline-block;
   margin: 0px 2px;
   cursor: pointer;
@@ -41,33 +41,30 @@ button:hover {
 
 @media only screen and (max-width: 1024px) {
   button{
-  min-width:600px;
-  padding: 26px 160px;
-  font-size: 2.5em;
+  min-width:80vw;
+  padding: 3vh 12vw;
+  font-size: 4.5vw;
   margin: 4px 2px;
-  border-radius: 45px;
+  border-radius: 80px;
   margin-bottom: 5%;
   }
 }
 
 @media only screen and (max-width: 610px) {
   button{
-  min-width:400px;
-  padding: 18px 100px;
-  font-size: 1.5em;
+    padding: 2vh 12vw;
+    font-size: 5vw;
   }
 }
 
 @media only screen and (max-width: 411px) {
   button{
-  min-width:320px;
-  padding: 16px 60px;
-  font-size: 1em;
+    padding: 1.5vh 12vw;
   }
 }
 
 @media only screen and (max-width: 330px) {
   button{
-  min-width:250px;
+    padding: 1.2vh 12vw;
   }
 }
